--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: MSBuild
+name: PUSH
 
 on:
   push:
@@ -36,7 +36,7 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
 
   lint:
-  
+
     runs-on: windows-latest
 
     steps:
