--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,6 +35,13 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
 
+    - name: UploadBinaries
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: x64\Release\
+        if-no-files-found: error
+
   lint:
 
     runs-on: windows-latest
@@ -43,3 +50,25 @@ jobs:
     - name: RunLint
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: echo LINT
+  
+  test:
+
+    needs: [build, lint]
+
+    runs-on: windows-latest
+
+    steps:
+
+    - name: SetupVSTest.exe
+      uses: Malcolmnixon/Setup-VSTest@v4
+
+    - name: DownloadBinaries
+      uses: actions/download-artifact@v3
+      with:
+        name: my-artifact
+        path: x64\Release
+
+    - name: RunTests
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: VSTest.Console.exe Debug/UnitTest1.dll
+
