update run path

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -70,5 +70,5 @@ jobs:
 
     - name: RunTests
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: VSTest.Console.exe Debug/UnitTest1.dll
+      run: VSTest.Console.exe x64\Release\UnitTest1.dll
 
