--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -82,7 +82,7 @@ jobs:
     -uses: actions/checkout@v3
 
     -name: DownloadBinaries
-      uses: actions/download-artifact@v3
+    -uses: actions/download-artifact@v3
       with:
         name: my-artifact
         path: x64\Release
