--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -94,11 +94,11 @@ jobs:
       
     - name: addEmail
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: git config --global user.email "olekaspt@mail.uc.edu"
+      run: git config --global user.email "saramsey21@gmail.com"
       
     - name: addName
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: git config --global user.name "Patrick Olelas"
+      run: git config --global user.name "saramsey21"
       
     - name: add
       working-directory: ${{env.GITHUB_WORKSPACE}}
